k8s-manifests/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py5-app
spec:
  rules:
  - host: "python-app.test.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: py5-app 
            port:
              number: 5000
